fix nav overflowing viewport width by change the padding on Nav/index.css file at line 25-26

--- a/src/Nav/index.css
+++ b/src/Nav/index.css
@@ -22,7 +22,8 @@ nav ul,li{
 }
 
 nav li{
-  padding: 0 30px 0 30px;
+  padding-left: clamp(15px,2.5vw,35px);
+  padding-right: clamp(15px,2.5vw,35px);
 }
 
 nav a{
